--- a/p2composite.example.tycho/pom.xml
+++ b/p2composite.example.tycho/pom.xml
@@ -9,6 +9,7 @@
 	<modules>
 		<module>../p2composite.example.plugin</module>
 		<module>../p2composite.example.feature</module>
+		<module>../p2composite.example.site</module>
 	</modules>
 
 	<properties>
