--- a/p2composite.example.site/pom.xml
+++ b/p2composite.example.site/pom.xml
@@ -12,4 +12,29 @@
 	<artifactId>p2composite.example.site</artifactId>
 	<packaging>eclipse-repository</packaging>
 
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>${maven-antrun-plugin.version}</version>
+				<executions>
+					<execution>
+						<id>show-current-version</id>
+						<phase>validate</phase>
+						<configuration>
+							<tasks>
+								<echo message="" />
+								<echo message="Repository path: ${project.build.directory}/repository" />
+								<echo message="Built version: ${unqualifiedVersion}.${buildQualifier}" />
+								<echo message="" />
+							</tasks>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
