--- a/p2composite.example.site/pom.xml
+++ b/p2composite.example.site/pom.xml
@@ -29,7 +29,7 @@
 								<echo message="Built version: ${unqualifiedVersion}.${buildQualifier}" />
 								<echo message="" />
 
-								<ant antfile="${basedir}/packaging.ant" target="composite.add">
+								<ant antfile="${basedir}/packaging.ant" target="p2.composite.add">
 								</ant>
 							</tasks>
 						</configuration>
@@ -46,7 +46,7 @@
 				<artifactId>tycho-eclipserun-plugin</artifactId>
 				<version>${tycho-version}</version>
 				<configuration>
-					<appArgLine>-application org.eclipse.ant.core.antRunner -buildfile packaging.ant composite.add -Dproject.build.directory=${project.build.directory} -DunqualifiedVersion=${unqualifiedVersion} -DbuildQualifier=${buildQualifier}</appArgLine>
+					<appArgLine>-application org.eclipse.ant.core.antRunner -buildfile packaging.ant p2.composite.add -Dproject.build.directory=${project.build.directory} -DunqualifiedVersion=${unqualifiedVersion} -DbuildQualifier=${buildQualifier}</appArgLine>
 					<repositories>
 						<repository>
 							<id>kepler</id>
