--- a/p2composite.example.tycho/pom.xml
+++ b/p2composite.example.tycho/pom.xml
@@ -84,6 +84,14 @@
 				</executions>
 			</plugin>
 
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-packaging-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<configuration>
+					<format>'v'yyyyMMdd'-'HHmm</format>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
