updated versions of tycho and p2 repositories

--- a/p2composite.example.site/pom.xml
+++ b/p2composite.example.site/pom.xml
@@ -88,9 +88,9 @@
 					<appArgLine>-application org.eclipse.ant.core.antRunner -buildfile packaging-p2composite.ant p2.composite.add -Dsite.label="Composite Site Example" -Dproject.build.directory=${project.build.directory} -DunqualifiedVersion=${unqualifiedVersion} -DbuildQualifier=${buildQualifier}</appArgLine>
 					<repositories>
 						<repository>
-							<id>kepler</id>
+							<id>luna</id>
 							<layout>p2</layout>
-							<url>http://download.eclipse.org/releases/kepler</url>
+							<url>http://download.eclipse.org/releases/luna</url>
 						</repository>
 					</repositories>
 					<dependencies>
