--- a/p2composite.example.tycho/pom.xml
+++ b/p2composite.example.tycho/pom.xml
@@ -13,8 +13,8 @@
 	</modules>
 
 	<properties>
-		<tycho-version>0.19.0</tycho-version>
-		<tycho-extras-version>0.19.0</tycho-extras-version>
+		<tycho-version>0.22.0</tycho-version>
+		<tycho-extras-version>0.22.0</tycho-extras-version>
 		<maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<memoryArgs>-Xms256M -Xmx1024M -XX:PermSize=256M -XX:MaxPermSize=256M -XX:+HeapDumpOnOutOfMemoryError</memoryArgs>
@@ -23,9 +23,9 @@
 
 	<repositories>
 		<repository>
-			<id>kepler</id>
+			<id>luna</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/releases/kepler</url>
+			<url>http://download.eclipse.org/releases/luna</url>
 		</repository>
 	</repositories>
 
