--- a/p2composite.example.tycho/pom.xml
+++ b/p2composite.example.tycho/pom.xml
@@ -91,6 +91,12 @@
 					<format>'v'yyyyMMdd'-'HHmm</format>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-versions-plugin</artifactId>
+				<version>${tycho-version}</version>
+			</plugin>
 		</plugins>
 	</build>
 </project>
